Fixed advantages max width on mobile

--- a/src/less/advantages.less
+++ b/src/less/advantages.less
@@ -22,6 +22,10 @@
         .flexRow;
         margin-right: auto;
         margin-bottom: 25px;
+
+        @media  @phone-strict {
+            max-width: 250px;
+        }
     }
 
     &__text {
